apps/base/oauth2-proxy/manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.1.3
        args:
        - --http-address=:8080
        - --upstream=file:///dev/null
        - --provider=oidc
        - --oidc-issuer-url=$(ISSUER_URL)
        - --pass-authorization-header=true
        - --set-authorization-header=true
        - --skip-provider-button=true
        - --client-id=$(CLIENT_ID)
        - --client-secret=$(CLIENT_SECRET)
        - --cookie-secret=$(COOKIE_SECRET)
        - --cookie-secure=true
        - --cookie-refresh=1h
        ports:
        - containerPort: 8080
          protocol: TCP
          name: http
      volumes:
      - name: tmp-volume
        emptyDir: {}
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
