apps/base/oauth2-proxy/manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  ports:
  - port: 80
    targetPort: http
