apps/base/oauth2-proxy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
spec:
  tls:
  - hosts:
      - oauth2-proxy
    secretName: tls
  rules:
  - host: oauth2-proxy
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
